# FutureSightML

./: .gitignore  FutureSightML.spec  LICENSE  PRIVACY.md  README.md  config.yaml  pyproject.toml  x-article-draft.md
.github/workflows/: release.yml
gui/: main.js  package.json
gui/static/: index.html
scripts/: MACBOOK_SETUP.md  backfill_ratings.py  build_exe.py  build_team.py  calibration.py  cross_validate.py  download_models.py  evaluate.py  export_pools.py  generate_icon.py  import_huggingface.py  package_models.py  retrain_all.sh  run_server.py  scrape_replays.py  scrape_stats.py  train_all_formats.py  train_model.py
showdown/: __init__.py  config.py
showdown/api/: __init__.py  server.py  state.py
showdown/data/: __init__.py  damage_calc.py  database.py  features.py  mechanics.py  pokemon_data.py  preprocessor.py  schema.py
showdown/models/: __init__.py  embeddings.py  ensemble.py  trainer.py  win_predictor.py  xgb_predictor.py
showdown/scraper/: __init__.py  replay_parser.py  replay_scraper.py  stats_scraper.py
showdown/simulator/: __init__.py  battle_sim.py
showdown/teambuilder/: __init__.py  analysis.py  constraints.py  evaluator.py  genetic.py  meta_analysis.py  spread_inference.py
showdown/utils/: __init__.py  constants.py  logging_config.py
tests/: test_api.py  test_constants.py  test_constraints.py  test_damage_calc.py  test_features.py  test_gen_features.py  test_models.py  test_parser.py  test_simulator.py
