[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-showdown-ml"
version = "0.1.0"
description = "Predictive ML for Pokemon Showdown team building"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.1",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.0",
    "fastapi>=0.109",
    "uvicorn>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
include = ["showdown*"]
